tests/errors/arguments/variables/invalid_char_03.src
.IPPcode18
defvar GF@v,ar